@@ -2,10 +2,11 @@ package com.example.financeapp.security;
 
 import com.example.financeapp.user.entity.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
     private final User user;
@@ -22,9 +23,18 @@ public class CustomUserDetails implements UserDetails {
         return user != null ? user.getUserId() : null;
     }
 
+    public Long getId() {
+        return user != null ? user.getUserId() : null;
+    }
+
+    public Role getRole() {
+        return user != null && user.getRole() != null ? user.getRole() : Role.USER;
+    }
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        Role role = getRole();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
@@ -37,8 +47,23 @@ public class CustomUserDetails implements UserDetails {
         return user.getEmail();
     }
 
-    @Override public boolean isAccountNonExpired() { return true; }
-    @Override public boolean isAccountNonLocked() { return true; }
-    @Override public boolean isCredentialsNonExpired() { return true; }
-    @Override public boolean isEnabled() { return true; }
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return user != null && !user.isLocked();
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return user != null && user.isEnabled() && !user.isDeleted();
+    }
 }
